# BrainFuck-language-interpreter

./: CMakeLists.txt  README.md
include/: ArrayCells.h  BrainFInterpreter.h  Command.h  CommandComplex.h  CommandInterpreter.h  CommandPlain.h  CommandType.h  CommandsPool.h  CommandsValidator.h
src/: ArrayCells.cpp  BrainFInterpreter.cpp  CommandComplex.cpp  CommandPlain.cpp  CommandsPool.cpp
test/: CMakeLists.txt  CommandInterpreter_tests.cpp  main.cpp
